Fixed text color in dark mode

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -70,7 +70,7 @@ textarea {
 
 a, p {
     font-family: 'Raleway', sans-serif;
-    color: #232323;
+    color: #d8d4cd;
     margin: 0;
     padding: 0;
     text-decoration: none;
